--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,16 +39,17 @@ dependencies {
     /*后期添加*/
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'//Retrofit网络请求框架
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'//Log信息拦截器
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'//ConverterFactory的Gson依赖包
+    compile 'com.github.bumptech.glide:glide:3.7.0'//图片加载库
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
     compile 'com.tumblr:remember:1.0.0@aar'
-    /*分组列表*/
-    compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    /*高德地图*/
-    compile files('libs/AMap_Location_V3.0.0_20160922.jar')
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'//listView分组列表
+    compile files('AMap_Location_V3.0.0_20160922.jar')//高德地图
+
+    compile 'io.reactivex:rxandroid:1.2.0'//适配rxandroid的依赖包
+    compile 'io.reactivex:rxjava:1.1.4'//适配rxjava的依赖包
 
     testCompile 'junit:junit:4.12'
 }
