--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
 
-        signingConfigs {
-            sySigns {
-                keyAlias 'sypm'
-                keyPassword 'sypm2016'
-                storeFile file('C:/Users/81813/.android/sypm.jks')
-                storePassword 'sypm2016'
-            }
+    signingConfigs {
+        sySigns {
+            keyAlias 'sypm'
+            keyPassword 'sypm2016'
+            storeFile file('C:/Users/81813/.android/sypm.jks')
+            storePassword 'sypm2016'
         }
+    }
 
     defaultConfig {
         applicationId "com.sypm.shuyuzhongbao"
@@ -44,22 +44,16 @@ dependencies {
     /*后期添加*/
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    //Retrofit网络请求框架
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-    //Log信息拦截器
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    //ConverterFactory的Gson依赖包
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    //图片加载库
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'//Retrofit网络请求框架
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'//Log信息拦截器
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'//ConverterFactory的Gson依赖包
+    compile 'com.github.bumptech.glide:glide:3.7.0'//图片加载库
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
     compile 'com.tumblr:remember:1.0.0@aar'
-    compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    //listView分组列表
-    compile 'io.reactivex:rxandroid:1.2.0'
-    //适配rxandroid的依赖包
-    compile 'io.reactivex:rxjava:1.1.4'
-    //适配rxjava的依赖包
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'//listView分组列表
+    compile 'io.reactivex:rxandroid:1.2.0'//适配rxandroid的依赖包
+    compile 'io.reactivex:rxjava:1.1.4'//适配rxjava的依赖包
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap3DMap_4.1.1_AMapNavi_1.9.3_AMapSearch_3.5.0_AMapLocation_3.1.0_20161027.jar')
+    compile 'com.yancy.imageselector:imageselector:1.3.0'
 }
