--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.4'//适配rxjava的依赖包
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap3DMap_4.1.1_AMapNavi_1.9.3_AMapSearch_3.5.0_AMapLocation_3.1.0_20161027.jar')
-    compile 'com.yancy.imageselector:imageselector:1.3.0'
+    compile 'com.yuyh.imgsel:library:1.2.0'
 }
