--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/StartTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".IDCardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,9 +65,9 @@
         <activity
             android:name=".LoginByAccountActivity"
             android:label="账号登陆" />
-        <activity
+        <!--<activity
             android:name=".IDCardActivity"
-            android:label="身份证信息" />
+            android:label="身份证信息" />-->
         <activity
             android:name=".RenameActivity"
             android:label="姓名" />
