--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64', 'mips', 'mips64'
+            abiFilters 'armeabi', 'armeabi-v8a', 'x86', 'x86_64'
+            /*abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64', 'mips', 'mips64'*/
         }
         manifestPlaceholders = [
-                JPUSH_PKGNAME : applicationId,
+                JPUSH_PKGNAME: applicationId,
                 JPUSH_APPKEY : "a255283885edcd495cc0e659", //JPush上注册的包名对应的appkey.
-                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
     }
     buildTypes {
@@ -62,7 +63,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.0'//适配rxandroid的依赖包
     compile 'io.reactivex:rxjava:1.1.4'//适配rxjava的依赖包
     testCompile 'junit:junit:4.12'
-    compile files('libs/AMap3DMap_4.1.1_AMapNavi_1.9.3_AMapSearch_3.5.0_AMapLocation_3.1.0_20161027.jar')//高德地图
+    compile files('libs/AMap3DMap_4.1.1_AMapNavi_1.9.3_AMapSearch_3.5.0_AMapLocation_3.1.0_20161027.jar')
+//高德地图
     compile 'com.yuyh.imgsel:library:1.2.0'//图片选择器
     compile 'cn.jiguang:jpush:2.2.0'//极光推送
     compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'//星期选择器
