--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,13 +46,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/StartTheme">
-        <activity android:name=".LoginByAccountActivity">
+        <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".MainActivity" />
         <activity
             android:name=".LoginActivity"
@@ -101,8 +101,12 @@
             android:name=".WeekPickerActivity"
             android:label="执行日期"
             android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".LoginByAccountActivity"
+            android:label="账号登陆" />
+        <!--<activity android:name=".WelcomeActivity" />-->
 
-        <!--高德-->
+        <!-- 高德 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="a49cc80567cfc47d6a9e57e82bf460b0" />
@@ -137,6 +141,7 @@
                 <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
