更换账号处理，自动接单处理，上下线状态更改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,8 +93,7 @@
         <activity
             android:name=".GrabOrderActivity"
             android:label="抢单"
-            android:launchMode="singleTop"
-            android:theme="@style/Theme.AppCompat.Light.DialogWhenLarge" />
+            android:launchMode="singleTop" />
         <activity
             android:name=".AddWorkTimeActivity"
             android:label="添加班次" />
