--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/StartTheme">
-        <activity android:name=".WelcomeActivity"
+        <activity
+            android:name=".WelcomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,79 +55,83 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="portrait"
-            android:label="登陆" />
+            android:label="登陆"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PersonalActivity"
-            android:screenOrientation="portrait"
-            android:label="个人资料" />
+            android:label="个人资料"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".FeedbackActivity"
-            android:screenOrientation="portrait"
-            android:label="意见反馈" />
+            android:label="意见反馈"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ModifyPasswordActivity"
-            android:screenOrientation="portrait"
-            android:label="修改密码" />
+            android:label="修改密码"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".IDCardActivity"
-            android:screenOrientation="portrait"
-            android:label="身份证信息" />
+            android:label="身份证信息"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".RenameActivity"
-            android:screenOrientation="portrait"
-            android:label="姓名" />
+            android:label="姓名"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".OrderDetailActivity"
-            android:screenOrientation="portrait"
             android:label="订单信息"
-            android:launchMode="singleTop" />
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".OrderStatusActivity"
+            android:label="订单状态改变"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PersonCodingActivity"
-            android:screenOrientation="portrait"
-            android:label="人员编码" />
+            android:label="人员编码"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".StoreAddressActivity"
-            android:screenOrientation="portrait"
-            android:label="所在门店" />
+            android:label="所在门店"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".WorkTimeActivity"
-            android:screenOrientation="portrait"
-            android:label="上班时间" />
+            android:label="上班时间"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MapActivity"
-            android:screenOrientation="portrait"
-            android:label="我的位置" />
+            android:label="我的位置"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".GrabOrderActivity"
-            android:screenOrientation="portrait"
             android:label="抢单"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AddWorkTimeActivity"
-            android:screenOrientation="portrait"
-            android:label="添加班次" />
+            android:label="添加班次"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".TimePickerActivity"
-            android:screenOrientation="portrait"
-            android:label="时间选择" />
+            android:label="时间选择"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".WeekPickerActivity"
-            android:screenOrientation="portrait"
             android:label="执行日期"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name=".LoginByAccountActivity"
-            android:screenOrientation="portrait"
-            android:label="账号登陆" />
+            android:label="账号登陆"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UpdateWorkTimeActivity"
-            android:screenOrientation="portrait"
-            android:label="更新上班时间" />
+            android:label="更新上班时间"
+            android:screenOrientation="portrait" />
         <!--<activity android:name=".WelcomeActivity" />-->
 
         <!-- 高德 -->
