--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,7 @@
         <activity
             android:name=".GrabOrderActivity2"
             android:label="抢单"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
         <!-- android:theme="@style/Dialog.NoTitle" -->
