--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,6 +187,10 @@
             </intent-filter>
         </receiver>
 
+        <service
+            android:name=".LocationService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
