未获取到定位信息不上传信息，更换订单完成时主页启动方式，改为默认启动方式，下拉刷新优化，药品显示问题解决。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25.0.0'
 
     signingConfigs {
         sySigns {
@@ -17,8 +17,8 @@ android {
         applicationId "com.sypm.shuyuzhongbao"
         minSdkVersion 14
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.2.0"
+        versionCode 4
+        versionName "1.2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //选择要添加的对应cpu类型的.so库。
@@ -52,7 +52,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
     /*后期添加*/
